Fix spacing and text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -242,6 +242,7 @@ body {
   color: var(--color-primary);
   font-weight: 600;
   font-size: 3.5rem;
+  text-align: center;
   line-height: 1.6;
 }
 
@@ -257,6 +258,7 @@ body {
   font-size: 5rem;
   line-height: 1.2;
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .header-body__header-title span {
@@ -269,6 +271,7 @@ body {
   max-width: 48rem;
   font-size: 1.6rem;
   font-weight: 500;
+  text-align: center;
 }
 
 .header-body__event-time {
@@ -276,16 +279,17 @@ body {
   font-family: "cocogoose", sans-serif;
   font-size: 3rem;
   color: var(--color-dark-2);
+  text-align: center;
 }
 
 .header-body__event-time--about {
   font-family: "lato", sans-serif;
   font-size: 1.6rem;
-  text-align: center;
 }
 
 .header-body__event-place {
   font-size: 1.8rem;
+  text-align: center;
 }
 
 .header-body__event-place--about {
@@ -832,15 +836,16 @@ body {
     padding: 8rem 0;
     height: calc(100vh - 12.48rem);
   }
+  .header-body__greeting-text, .header-body__header-title, .header-body__header-desc, .header-body__event-time, .header-body__event-place {
+    text-align: left;
+  }
   #artist {
     width: calc((100% - 8rem) / 2);
   }
   #overflow {
     height: 100%;
   }
-  #speakers__button {
-    display: none;
-  }
+  #speakers__button,
   .footer__main--about {
     display: none;
   }
