--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -42,6 +42,7 @@
     background-image: linear-gradient(to right, rgba(249, 249, 249, 0.9));
   }
 }
+
 /* stylelint-enable */
 
 .header-nav-container {
@@ -118,6 +119,7 @@
     color: var(--color-primary);
     font-weight: 600;
     font-size: 3.5rem;
+    text-align: center;
     line-height: 1.6;
   }
 
@@ -133,6 +135,7 @@
     font-size: 5rem;
     line-height: 1.2;
     margin-bottom: 2rem;
+    text-align: center;
 
     span {
       display: block;
@@ -145,6 +148,7 @@
     max-width: 48rem;
     font-size: 1.6rem;
     font-weight: 500;
+    text-align: center;
   }
 
   &__event-time {
@@ -152,16 +156,17 @@
     font-family: $display-font;
     font-size: 3rem;
     color: var(--color-dark-2);
+    text-align: center;
 
     &--about {
       font-family: $default-font;
       font-size: 1.6rem;
-      text-align: center;
     }
   }
 
   &__event-place {
     font-size: 1.8rem;
+    text-align: center;
 
     &--about {
       text-decoration: none;
@@ -554,6 +559,14 @@
   .header-body {
     padding: 8rem 0;
     height: calc(100vh - 12.48rem);
+
+    &__greeting-text,
+    &__header-title,
+    &__header-desc,
+    &__event-time,
+    &__event-place {
+      text-align: left;
+    }
   }
 
   #artist {
@@ -564,10 +577,7 @@
     height: 100%;
   }
 
-  #speakers__button {
-    display: none;
-  }
-
+  #speakers__button,
   .footer__main--about {
     display: none;
   }
